# django-kafka-demo

./: .gitignore  Makefile  README.md  compose.yaml  pyproject.toml
django-app-other/app/: settings.py  urls.py
django-app-other/kafka/: admin.py  models.py
django-app-other/kafka/migrations/: 0001_initial.py  0002_kafkaconsumerlog.py
django-app-other/users/: admin.py  models.py  serializers.py  urls.py  views.py
django-app-other/users/management/commands/: kafkaconsumer.py
django-app-other/users/migrations/: 0001_initial.py
django-app/app/: kafka.py  settings.py  urls.py
django-app/kafka/: admin.py  client.py  models.py
django-app/kafka/migrations/: 0001_initial.py
django-app/users/: admin.py  constants.py  models.py  serializers.py  urls.py
django-app/users/migrations/: 0001_initial.py
docker/django/: Dockerfile
