[tool.poetry]
name = "django-starter"
version = "0.1.0"
description = ""
authors = ["Kobe Li <likobe23@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.10"
django = "4.2"
django-environ = "^0.11.2"


[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
